--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 </head>
 <body>
-                <!-----Header------>
-    <header class="sticky">
-    <a href="#" class="logo"><img src="assets/logotru.png"</a>
+                <!---------Header---------->
+  <header class="sticky">
+    <a href="#" class="logo"><img src="assets/logotru.png"></a>
     <div class="bx bx-menu" id="menu-icon"></div>
      <ul class="navlist">
         <li><a href="#home">Home</a></li>
@@ -26,10 +26,9 @@
         <li><a href="#service">Service</a></li>
         <li><a href="#contact">Contact</a></li>
      </ul>
-     <a href="#" class="top-btn">Get A Quote</a>
-</header>
-
-                <!------Home------->
+        <a href="#contact" class="top-btn">Get A Quote</a>
+  </header>
+                <!----------Home----------->
     <section class="home" id="home">
         <div class="home-text">
         <h3>Always Remember...</h3>
@@ -47,8 +46,7 @@
             <img src="/assets/front-door" alt="Exterior home with front door open and bicycle">
         </div>
     </section>
-
-                <!--------Sub Service--------->
+                <!--?------Sub Service--------->
                 <section class="sub-service">
                     <div class="items">
 
@@ -101,8 +99,7 @@
                       </div>
                     </div>
                 </section>
-
-                <!---------About----------->
+                <!--?-------About----------->
     <section class="about" id="about">
         <div class="about-img">
             <img src="/assets/male-placeholder.png" alt="">
@@ -115,7 +112,145 @@
             <a href="#" class="btn">Let TRU Get It Done</a>
         </div>
     </section>
-                <!-------Link to js--------->
+                <!--?------Portfolio--------->
+    <section class="portfolio" id="portfolio">
+        <div class="heading">
+            <h3>Portfolio</h3>
+            <h2>My Work</h2>
+            <p>Description Goes here</p>
+        </div>
+
+        <div class="portfolio-content">
+            <div class="col">
+                <img src="/assets/paint.jpg" alt="">
+                <div class="layer">
+                    <h3>Painting</h3>
+                    <h5>Example</h5>
+                </div>
+            </div>
+
+            <div class="col">
+                <img src="/assets/installation.jpg" alt="">
+                <div class="layer">
+                    <h3>Installation</h3>
+                    <h5>Example</h5>
+                </div>
+            </div>
+
+            <div class="col">
+                <img src="/assets/repair.jpg" alt="">
+                <div class="layer">
+                    <h3>Repair</h3>
+                    <h5>Example</h5>
+                </div>
+            </div>
+
+            <div class="col">
+                <img src="/assets/remodel.jpg" alt="">
+                <div class="layer">
+                    <h3>Remodeling</h3>
+                    <h5>Example</h5>
+                </div>
+            </div>
+
+            <div class="col">
+                <img src="/assets/maintenance.jpg" alt="">
+                <div class="layer">
+                    <h3>Maintenance</h3>
+                    <h5>Example</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+                <!--?---------Service------------->
+    <section class="service" id="service">
+        <div class="heading">
+            <h3>Service</h3>
+            <h2>My services offered are</h2>
+            <p>Description Goes here</p>
+        </div>
+        <div class="service-content">
+            <div class="row">
+                <div class="s s-one">
+                    <img src="/assets/" alt="">
+                </div>
+                <h3>Service 1</h3>
+                <h5>Starting from $29.99</h5>
+                <p>Description goes in here</p>
+            </div>
+
+            <div class="row">
+                <div class="s s-two">
+                    <img src="/assets/" alt="">
+                </div>
+                <h3>Service 2</h3>
+                <h5>Starting from $29.99</h5>
+                <p>Description goes in here</p>
+            </div>
+
+            <div class="row">
+                <div class="s s-three">
+                    <img src="/assets/" alt="">
+                </div>
+                <h3>Service 3</h3>
+                <h5>Starting from $29.99</h5>
+                <p>Description goes in here</p>
+            </div>
+
+            <div class="row">
+                <div class="s s-four">
+                    <img src="/assets/" alt="">
+                </div>
+                <h3>Service 4</h3>
+                <h5>Starting from $29.99</h5>
+                <p>Description goes in here</p>
+            </div>
+        </div>
+    </section>
+                <!--?------Work Status--------->
+    <section class="cta">
+        <div class="heading">
+            <h2>To date we have:</h2>
+        </div>
+
+        <div class="cta-box">
+            <div class="wrap one">
+                <h3>650+</h3>
+                <p>Finished Projects</p>
+                <h6>(And Counting)</h6>
+            </div>
+            <div class="wrap two">
+                <h3>10+</h3>
+                <p>Managed Properties & Communities</p>
+            </div>
+            <div class="wrap three">
+                <h3>200+</h3>
+                <p>Satisfied Customers</p>
+            </div>
+        </div>
+    </section>
+                <!--?---------Contact------------->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="center">
+                <h3>Fill now to schedule a quote</h3>
+                <p>Don't like forms? Send us an email. </p>
+            </div>
+
+            <div class="action">
+                <form action="">
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <input type="submit" name="submit" id="submit">
+                </form>
+            </div>
+        </div>
+    </section>
+                    <!--?-------Footer----------->
+    <footer class="footer">
+        <p>TRU Property Services &copy 2023</p>
+    </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+                <!--?-------Link to js----------->
     <script type="text/javascript" src="/script.js"></script>
 
 </body>
