--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tru Property Service</title>
-    <link rel="stylesheet" type="text/css href="/style.css">
+    <link rel="stylesheet" type="text/css href="style.css">
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -251,7 +251,7 @@
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
                 <!--?-------Link to js----------->
-    <script type="text/javascript" src="/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
